# Quantum-Enhanced-Portfolio-Optimizer-QEPO-

./: .gitignore  LICENSE  README.md
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json  tasks_master.json
quantum-portfolio/: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_mock_data.py  pyproject.toml  requirements.txt
quantum-portfolio-web/: DEMO_SCRIPT.md  MLFLOW_SETUP.md  PROJECT_SUMMARY.md  README.md  SETUP.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
quantum-portfolio-web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
quantum-portfolio-web/backend/: requirements.txt  server.py  start.bat  start.sh  start_mlflow.py  test_mlflow_connection.py
quantum-portfolio-web/components/: Backtesting.tsx  Configuration.tsx  DataIngestion.tsx  JobMonitor.tsx  LinkedInLogo.tsx  LoadingScreenDemo.tsx  Navigation.tsx  PortfolioOptimization.tsx  QuantumLoadingScreen.tsx  Reporting.tsx
quantum-portfolio/.cursor/: context.md
quantum-portfolio/.cursor/prompts/: add_constraint.md  implement_qaoa.md  write_test.md
quantum-portfolio/.cursor/rules/: data.mdc  mlflow.mdc  project.mdc
quantum-portfolio/config/: backtest.yml  data.yml  hardware.yml  optimizer.yml
quantum-portfolio/data/backtest/: backtest_perf.csv  equity_curve.csv  exposures.csv  portfolio_alloc.csv
quantum-portfolio/src/qepo/: __init__.py  backtest.py  baselines.py  cli.py  constraints.py  data.py  encoder.py  features.py  hardware.py  metrics.py  postprocess.py  quantum_qaoa.py  report.py  utils.py
quantum-portfolio/tests/: test_backtest.py  test_baselines.py  test_cli.py  test_data.py  test_encoder.py  test_features.py  test_hardware.py  test_metrics.py  test_postprocess.py  test_quantum_qaoa.py  test_report.py  test_utils.py
